# CuCV

./: CMakeLists.txt  Dummy.cpp  LICENSE  Playground.cpp  README.md  cuda_compute_capability.c
CuCV/: CMakeLists.txt  Core.h  ImgProc.h
CuCV/modules/: CMakeLists.txt
CuCV/modules/core/: CMakeLists.txt  LinearMemory.h  TextureImage.h  core.cpp
CuCV/modules/core/base/: Base.cpp  Base.h  BaseDefine.h  CMakeLists.txt  Mat2.h  Mat3.h  Mat4.h  VectorHelper.h
CuCV/modules/imgproc/: BasicProc.h  CMakeLists.txt  Resize.cu
CuCV/modules/superpixel/: CMakeLists.txt  gSLICr.cu  gSLICr.h  gSLICr_kernel.h
